# M8O-408B-20

./: .gitignore  README.md  Robint.ipynb  lab6_NM.ipynb  lab7_NM.ipynb  lab8_NM.ipynb  pyproject.toml
Molchanov/cp/: cp.ipynb
NML5/: NML5.sln
NML5/NML5/: Form1.Designer.cs  Form1.cs  Program.cs
NML6/NML6/: Form1.cs
NML7/NML7/: Form1.Designer.cs
NML8/NML8/: NML8.csproj
Zubko/: main.py
Zubko/lab5/: functions.py  main.py  show.py  task.py
Zubko/lab6/: main.py  task.py
Zubko/lab7/: functions.py  show.py  task.py
Zubko/lab8/: functions.py  main.py  show.py  task.py
aksenov/lab5/: NM_lab_5.ipynb
aksenov/lab6/: NM_lab_6.ipynb
aksenov/lab7/: NM_lab_7.ipynb
aksenov/lab8/: NM_lab_8.ipynb
baranov/lab5/: lab5.py
baranov/lab6/: lab6.py
baranov/lab7/: lab7.py
baranov/lab8/: lab8.py
blinov/cw/: main.ipynb  report.docx
blinov/lab5/: go.mod  main.go  plot.go  report.tex  utils.go
blinov/lab6/: go.sum  main.go  plot.go  report.tex  utils.go
blinov/lab7/: main.go  plot.go  report.tex
blinov/lab8/: go.mod  go.sum  main.go  report.tex  utils.go
borisov/cp/: log_default  main.py  output  test
borisov/lab5/: draw_results.py  (+2 more)
cp/: cp.py
fattyakhetdinov/: .gitignore
khannanov/lab08/src/: config.py  main.py  pyproject.toml  schema.py  solver.py  utils.py
klitnaya/: 6.1.py  6_2.cpp
lab07/: 7.2.cpp  чм7.ipynb  чм7.py
lab5/: main.cpp
lab6/: main.cpp
lab7/: graphics.py  main.py  methods.py  parameters.py
lab8/: graphics.py  main.py  parameters.py
molchanov/: lab5_NM.ipynb
shandryuk/: .gitignore
task1/: CMakeLists.txt  main.cpp
(+196 files in other folders)
